feat: api gateway keycloak and docker compose changes